Made a minor edit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Sample Index</title>
   </head>
   <body>
-    <h1>Welcome to my website!</h1>
+    <h1>Welcome to my website! This is a lovely place, albeit a bit boring.</h1>
     <p>This is a sample index.html file.</p>
   </body>
 </html>
